Add rebirth passive with rewind revive flow

--- a/energy_crystal_td_v0_47_meteor_counterplay_shootmeteor/index.html
+++ b/energy_crystal_td_v0_47_meteor_counterplay_shootmeteor/index.html
@@ -78,7 +78,7 @@
           <button class="mini" id="btn-effect-toggle" title="접기/펼치기">▾</button>
         </div>
         <div class="body" id="ui-passive-desc">
-          아직 선택되지 않았습니다. (메뉴에서 4종 중 1개 선택)
+          아직 선택되지 않았습니다. (메뉴에서 5종 중 1개 선택)
         </div>
       </div>
       <div id="coreUpgCard" class="panel">
@@ -241,6 +241,7 @@
               <button class="btn" id="btn-passive-resonance">공명</button>
               <button class="btn" id="btn-passive-overload">과부화</button>
               <button class="btn" id="btn-passive-overdrive">오버드라이브</button>
+              <button class="btn" id="btn-passive-rebirth">부활</button>
             </div>
 	            <div class="hint subtle" id="ui-passive-desc-menu" style="margin-top:6px; line-height:1.35;">
 	              패시브 효과를 선택하면 여기에서 설명을 확인할 수 있습니다.
